--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -1442,6 +1442,10 @@ may affect its placement.
 Returns true if the target supports decimal floating point.
 @end deftypefn
 
+@deftypefn {Target Hook} {bool} TARGET_FIXED_POINT_SUPPORTED_P (void)
+Returns true if the target supports fixed-point arithmetic.
+@end deftypefn
+
 @deftypefn {Target Hook} {const char *} TARGET_MANGLE_FUNDAMENTAL_TYPE (tree @var{type})
 If your target defines any fundamental types, define this hook to
 return the appropriate encoding for these types as part of a C++
