--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -1287,6 +1287,11 @@ extension.  This is enabled by default only on PowerPC GNU/Linux
 systems.  Other systems may also support it, but require the user to
 specifically enable it.
 
+@item --enable-fixed-point
+@itemx --disable-fixed-point
+Enable (or disable) support for the C fixed-point arithmetic
+extension.
+
 @item --with-long-double-128
 Specify if @code{long double} type should be 128-bit by default on selected
 GNU/Linux architectures.  If using @code{--without-long-double-128},
