--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,17 @@
+2006-11-06  Andrew Haley  <aph@redhat.com>
+
+	* defineclass.cc (prepare_pool_entry): Be careful about which
+	constant pool entries have their '/' characters stripped.
+	(handleGenericSignature): Likewise.
+	(handleAnnotationElement): Likewise.
+	(handleAnnotation): Likewise.
+	(read_one_class_attribute): Likewise.
+	(handleMethod): Likewise.
+
+	* include/java-cpool.h (JV_CONSTANT_LazyFlag): New.
+	* java/lang/natClass.cc (check_constant): Likewise.
+	* link.cc (resolve_pool_entry): Mask JV_CONSTANT_LazyFlag.
+
 2006-11-01  Andrew Haley  <aph@redhat.com>
 
 	* java/lang/natClass.cc (parseAnnotationElement): Set result from
