2006-11-07  Andrew Haley  <aph@redhat.com>
        * java/lang/VMCompiler.java (compileClass): Revert mistaken
        change.

        * java/lang/natVMClassLoader.cc (defineClass): Register the new
        class with the initiating loader.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@118566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2006-11-07  Andrew Haley  <aph@redhat.com>
+
+	* java/lang/VMCompiler.java (compileClass): Revert mistaken
+	change.
+
+	* java/lang/natVMClassLoader.cc (defineClass): Register the new
+	class with the initiating loader.
+
 2006-11-06  Andrew Haley  <aph@redhat.com>
 
 	* defineclass.cc (prepare_pool_entry): Be careful about which
