svn merge -r116374:116375 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116556:116557 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116620:116621 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116621:116622 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116626:116627 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r116693:116694 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117073:117074 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117074:117075 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117369:117370 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117393:117394 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r117453:117454 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r118450:118451 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch svn merge -r118451:118452 svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_2-branch
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@118580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/libjava/ChangeLog
+++ b/gcc-4_1-branch/libjava/ChangeLog
@@ -1,3 +1,40 @@
+2006-11-03  Gary Benson  <gbenson@redhat.com>
+
+	* java/net/InetAddress.java: Removed.
+	* java/net/natInetAddressNoNet.cc: Likewise.
+	* java/net/natInetAddressPosix.cc: Likewise.
+	* java/net/natInetAddressWin32.cc: Likewise.
+	* java/net/VMInetAddress.java (getLocalHostname,
+	lookupInaddrAny, getHostByAddr, getHostByName,
+	aton): Replace glue methods with native ones.
+	* java/net/natVMInetAddressNoNet.cc: New file.
+	* java/net/natVMInetAddressPosix.cc: Likewise.
+	* java/net/natVMInetAddressWin32.cc: Likewise.
+	* Makefile.am, configure.ac: Reflect the above.
+	* sources.am, Makefile.in, configure: Rebuilt.
+
+	* java/net/natVMNetworkInterfaceWin32.cc
+	(winsock2GetRealNetworkInterfaces): Create InetAddress
+	objects using InetAddress.getByAddress.
+	* gnu/java/net/natPlainSocketImplWin32.cc
+	(accept, getOption): Likewise.
+	* gnu/java/net/natPlainDatagramSocketImplWin32.cc
+	(peekData, receive, getOption): Likewise.
+
+2006-09-20  Gary Benson  <gbenson@redhat.com>
+
+	* java/net/InetAddress.java: Mostly merged with Classpath.
+	* java/net/VMInetAddress.java: New file.
+	* sources.am, Makefile.in: Rebuilt.
+
+	* java/net/natVMNetworkInterfacePosix.cc
+	(getInterfaces): Create InetAddress objects using
+	InetAddress.getByAddress.
+	* gnu/java/net/natPlainSocketImplPosix.cc
+	(accept, getOption): Likewise.
+	* gnu/java/net/natPlainDatagramSocketImplPosix.cc
+	(peekData, receive, getLocalAddress): Likewise.
+
 2006-09-27  Tom Tromey  <tromey@redhat.com>
 
 	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=201712
