--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,22 @@
+2006-11-07  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/29610
+	* tree-cfgcleanup.c (cleanup_control_flow): Honor return value
+	of tree_purge_dead_eh_edges as it may free dominators.
+
+	* g++.dg/other/pr29610.C: New testcase.
+
+2006-11-07  Jie Zhang  <jie.zhang@analog.com>
+
+	* gcc.c (process_command): Treat -b as normal switch if its argument
+	has no dash.
+
+2006-11-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/29695
+	* fold-const.c (fold_ternary): Fix A < 0 ? <sign bit of A> : 0
+	simplification.
+
 2006-11-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/install.texi (sparc-sun-solaris2*): Update GMP/MPFR build
